--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@storybook/blocks": "^7.0.0",
     "@storybook/react": "^7.0.0",
     "@storybook/react-webpack5": "^7.0.0",
+    "@storybook/test-runner": "^0.10.0",
     "@storybook/testing-library": "^0.0.14-next.2",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.0"
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
+    "test-storybook": "test-storybook",
     "build-storybook": "storybook build"
   }
 }
