--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "@storybook/react-webpack5": "^7.0.0",
     "@storybook/test-runner": "^0.10.0",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/testing-react": "^2.0.0",
+    "@testing-library/react": "^14.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.0"
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
     "test-storybook": "test-storybook",
+    "test-snapshots": "jest",
     "build-storybook": "storybook build"
   }
 }
