--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
+    "@storybook/addon-coverage": "^0.0.8",
     "@storybook/addon-essentials": "^7.0.0",
     "@storybook/addon-interactions": "^7.0.0",
     "@storybook/addon-links": "^7.0.0",
@@ -29,6 +30,7 @@
     "storybook": "storybook dev -p 6006",
     "test-storybook": "test-storybook",
     "test-snapshots": "jest",
+    "test-coverage": "yarn test-storybook --coverage",
     "build-storybook": "storybook build"
   }
 }
